plugins {
    id 'org.springframework.boot' version '2.7.0'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
}

group = 'com.khedmatkar'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '15'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
//    implementation 'org.flywaydb:flyway-core'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    implementation('org.postgresql:postgresql')

    implementation 'org.springframework.boot:spring-boot-starter-web'

    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.7.0'

    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.7.0'

    implementation('org.springdoc:springdoc-openapi-ui:1.6.9')
}

tasks.named('test') {
    useJUnitPlatform()
}
